<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BigSpoon</string>
    <string name="title_activity_tutorial_screen1">TutorialScreen1</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_tutorial_screen6">TutorialScreen6</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emailAddress">Email Address</string>
    <string name="fullName">Name</string>
    <string name="title_activity_xyz">XYZActivity</string>
   <!-- <string name="app_id">1409382219346628</string>-->
    <string name="title_activity_categories_list">CategoriesListActivity</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="title_activity_main_list">MainListActivity</string>
    <string name="title_activity_menu_list">MenuListActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_outlet">Outlets</string>
    <string name="title_activity_out_list">OutListActivity</string>
    <string name="title_activity_custom_list">CustomList</string>
    <string name="title_testingBg">Testingbg!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="testingbg">Testingbg!</string>
    <string name="orderDate">2014/05/05 (14 days ago)</string>
    <string name="Have_a_Suggestion">Have a suggestion? </string>
    <string name="have_anice_day"> Have a nice day !</string>
    <string name="enjoy_meal"> Hope you enjoyed your meal.</string>
    <string name="ratings"> Please rate our dishes</string>
    <string name="thanksforcoming"> Thanks for coming !</string>
    <string name="the_waiter"> The waiter will be right with you</string>
    <string name="request_for"> Request for bill is submitted </string>
    <string name="service_name">BigSpoon Location Service</string>
    <string name="please_turn_on_gps">Please turn on GPS and Google Location Service.</string>
    
    <string name="outlet_title">Outlets</string>
    <string name="category_title">Categories</string>
    <string name="menu_title">Menu List</string>
    <string name="order_history">Order History</string>
	<string name="coming_soon">Coming Soon!</string>
    <color name="white">#FFFFFF</color>
    <color name="blue">#86CBD7</color>
    <color name="green">#8BCC6F</color>
    <color name="black">#000000</color>
    <color name="background">#C4C4B9</color>
    <color name="backgroundScreen">#E2E2D4</color>
    <color name="backgroundText">#ABAB9B</color>

    <string name="action_settingssssss">ABCDEF</string>
    <string name="title_activity_order_history">OrderHistoryActivity</string>
    <string name="title_activity_order_history_details">OrderHistoryDetailsActivity</string>
    <string name="title_activity_items">ItemsActivity</string>
    <string name="title_activity_action_bar">ActionBarActivity</string>
    <string name="title_activity_call_water_service">CallWaterServiceActivity</string>
    <string name="title_activity_user_review">UserReviewActivity</string>
    <string name="title_activity_modifier">ModifierActivity</string>
    <string name="title_activity_modifier_adapter">ModifierAdapter</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="app_id">617139018336855</string> 
    <string name="add_note">Add notes (e.g. no peanuts)&#8230;</string> 
    
    <item type="id" name="POSITION"/>
    <item type="id" name="SECTION"/>
    <item type="id" name="ITEM_NAME"/>
    <item type="id" name="HOLDER"/>
    <item type="id" name="COUNTER_DISPLAY"/>
</resources>