<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:background="@color/backgroundScreen"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="0sp"
    android:weightSum="1"
    android:gravity="center"
    tools:context=".UserReviewActivity" >

    <TextView
       android:id="@+id/reviewTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:textColor="@color/green"
       android:includeFontPadding="false"
       android:text="@string/thanksforcoming"
       android:textSize="25dp"  />
    
    <TextView
        android:id="@+id/ReviewLine2"
       android:textColor="@color/green"
        android:layout_below="@+id/reviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/enjoy_meal"
        android:textSize="15dp"  />
    
    <TextView
        android:id="@+id/ReviewLine3"
        android:layout_below="@+id/ReviewLine2"
        android:layout_width="wrap_content"
        android:textColor="@color/green"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/ratings"
        android:textSize="15dp" />
    
    <ListView
        android:id="@+id/ratingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ReviewLine3"
        android:layout_weight="0.10"
        android:divider="@android:color/transparent"
        android:background="@color/background" 
        android:dividerHeight="1.0sp"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >
                   
    </ListView>
    
    
    
    
    <TextView
        android:id="@+id/ReviewMessage"
        android:layout_below="@+id/ratingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/request_for"
        android:textColor="@color/black"
        android:background="@color/backgroundText"
        android:textSize="18dp"  />
    
          
     <TextView
        android:id="@+id/ReviewMessage2"
        android:layout_below="@+id/ReviewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/backgroundText"
        android:layout_centerHorizontal="true"
        android:text="@string/the_waiter"
        android:textSize="15dp" />

     <EditText
         android:id="@+id/editText1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.13"
         android:ems="8"
         android:hint="Your feedabck here..."
         android:textSize="15dp"
         android:inputType="textPostalAddress">
         <requestFocus />
     </EditText>
    
     
     
     <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"             
    android:orientation="horizontal" 
    android:layout_marginTop="35dp">

<Button
    android:id="@+id/button1"
    android:layout_width="120sp"
    android:layout_height="45dp"
    android:layout_marginLeft="20dp"                    
    android:text="Cancel" 
    android:background="@color/black"
    android:textColor="@color/white"
    android:layout_gravity="right" 
    android:layout_marginRight="15dp"/>
<Button
    android:id="@+id/button2"
    android:layout_width="120sp"
    android:background="@color/green"
    android:textColor="@color/white"
    android:layout_height="45dp"
    android:layout_marginLeft="70dp"                    
    android:text="Submit" 
    android:layout_gravity="left" 
    android:layout_marginRight="15dp"
   />


</LinearLayout>
</LinearLayout>
